# kinect_pendulum_demo

./: .gitignore  CMakeLists.txt  README.md  manifest.xml  package.xml
analysis/: angle_utils.py  calculate_and_plot_errors.py  data_animator.py  proposal_analysis.py
launch/: data_collection.launch  demo.launch
src/: data_collection_interface.py  pendulum_simulator.py  pendulum_simulator_andy.py  set_windows.sh  skeleton_filter.py  skeleton_interface.py  testing_pendulum_simulator.py
